feat: add hikaricp to pom

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>7.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
