--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,66 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.4.0</version>
-            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>24</source><target>24</target></configuration></plugin>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>24</source>
+                    <target>24</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <!-- Server-Side Rendering -->
+        <profile>
+            <id>ssr</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <finalName>music-ssr</finalName>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <warName>${project.artifactId}-ssr</warName>
+                            <webResources>
+                                <!-- Thymeleaf -->
+                                <resource>
+                                    <directory>src/main/resources/templates</directory>
+                                    <targetPath>WEB-INF/classes/templates</targetPath>
+                                </resource>
+                            </webResources>
+                            <packagingExcludes>csr/**</packagingExcludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>csr</id>
+            <build>
+                <finalName>music-csr</finalName>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <warName>${project.artifactId}-csr</warName>
+                            <webResources>
+                                <!-- SPA -->
+                                <resource>
+                                    <directory>src/main/webapp/csr</directory>
+                                    <targetPath>/</targetPath>
+                                </resource>
+                            </webResources>
+                            <packagingExcludes>**/ssr/**,templates/**</packagingExcludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
