--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 ### IntelliJ IDEA ###
+!.idea/artifacts/*
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
