build(pom): clean up build structure

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                                     <targetPath>WEB-INF/classes/templates</targetPath>
                                 </resource>
                             </webResources>
-                            <packagingExcludes>**/api/**,csr/**</packagingExcludes>
+                            <packagingExcludes>WEB-INF/classes/org/titilda/music/api/**,csr/**</packagingExcludes>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -141,13 +141,6 @@
         </profile>
         <profile>
             <id>csr</id>
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--                    <artifactId>jackson-databind</artifactId>-->
-<!--                    <version>2.18.3</version>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
             <build>
                 <finalName>music-csr</finalName>
                 <plugins>
@@ -162,7 +155,7 @@
                                     <targetPath>/</targetPath>
                                 </resource>
                             </webResources>
-                            <packagingExcludes>**/ssr/**,templates/**</packagingExcludes>
+                            <packagingExcludes>WEB-INF/classes/org/titilda/music/ssr,WEB-INF/classes/templates/**,csr/**</packagingExcludes>
                         </configuration>
                     </plugin>
                 </plugins>
