--- a/Dockerfile.csr
+++ b/Dockerfile.csr
@@ -24,7 +24,7 @@ RUN chmod +x mvnw
 RUN mvn clean package -Pcsr -DskipTests
 
 # Runtime stage
-FROM tomcat:10.1.44-jdk21-temurin
+FROM ghcr.io/titilda/tomcat-jre-latest:latest
 
 # Remove default ROOT application
 RUN rm -rf /usr/local/tomcat/webapps/ROOT
